fix: use overflow: hidden to improve performance with big images

--- a/client/style.css
+++ b/client/style.css
@@ -402,6 +402,7 @@ label {
 .product-card-image {
   position: relative;
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .product-card img {
